@@ -21,16 +21,16 @@ package org.apache.hadoop.yarn.api;
 import junit.framework.Assert;
 
 import org.apache.hadoop.yarn.api.records.NodeId;
-import org.apache.hadoop.yarn.util.Records;
+import org.apache.hadoop.yarn.util.BuilderUtils;
 import org.junit.Test;
 
 public class TestNodeId {
   @Test
   public void testNodeId() {
-    NodeId nodeId1 = createNodeId("10.18.52.124", 8041);
-    NodeId nodeId2 = createNodeId("10.18.52.125", 8038);
-    NodeId nodeId3 = createNodeId("10.18.52.124", 8041);
-    NodeId nodeId4 = createNodeId("10.18.52.124", 8039);
+    NodeId nodeId1 = BuilderUtils.newNodeId("10.18.52.124", 8041);
+    NodeId nodeId2 = BuilderUtils.newNodeId("10.18.52.125", 8038);
+    NodeId nodeId3 = BuilderUtils.newNodeId("10.18.52.124", 8041);
+    NodeId nodeId4 = BuilderUtils.newNodeId("10.18.52.124", 8039);
 
     Assert.assertTrue(nodeId1.equals(nodeId3));
     Assert.assertFalse(nodeId1.equals(nodeId2));
@@ -47,10 +47,4 @@ public class TestNodeId {
     Assert.assertEquals("10.18.52.124:8041", nodeId1.toString());
   }
 
-  private NodeId createNodeId(String host, int port) {
-    NodeId nodeId = Records.newRecord(NodeId.class);
-    nodeId.setHost(host);
-    nodeId.setPort(port);
-    return nodeId;
-  }
 }
